...
            as? SectionLabelHeaderCollectionReusableView {

            switch indexPath.section {
            case 0:
                sectionHeader.label.text = "Intereses"
            case 1:
                sectionHeader.label.text = "Reacciones"
            default: break
            }

            return sectionHeader
        }
        return UICollectionReusableView()
...
