...
                            <items>
                                <tableRow identifier="TrendingRow" id="3ah-wf-mcN" customClass="TrendingRowController" customModule="Watch_Extension">
                                    <group key="rootItem" width="1" alignment="left" id="6FO-DZ-P4U">
                                        <items>
                                            <group alignment="left" id="2D7-IM-A0V">
                                                <items>
                                                    <label width="1" height="79.5" alignment="left" text="Macri" textAlignment="left" id="0BF-0n-XTO">
                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <fontDescription key="font" type="system" weight="medium" pointSize="20"/>
                                                    </label>
                                                </items>
                                                <edgeInsets key="margins" left="4" right="0.0" top="0.0" bottom="0.0"/>
                                            </group>
...
